refactor : fix wearings
Signed-off-by: anshul gite <anshulgite2000@gmail.com>